chore: change .pastore directory to .pastore-cli

--- a/install
+++ b/install
@@ -2,14 +2,14 @@
 
 current=$PWD
 
-rm -rf $HOME/.pastore
-mkdir $HOME/.pastore
-cp -r ./* $HOME/.pastore
-cd $HOME/.pastore
+rm -rf $HOME/.pastore-cli
+mkdir $HOME/.pastore-cli
+cp -r ./* $HOME/.pastore-cli
+cd $HOME/.pastore-cli
 npm i --production
 
 cd $current
 
 echo "You will need to set up the PATH environment variable in your terminal to have access to pastore-cli's binaries globally."
 echo "Add below line to your profile (this may be in your .profile, .bashrc, .zshrc, etc.)"
-echo "export PATH=\"\$PATH:\$HOME/.pastore/bin\""
+echo "export PATH=\"\$PATH:\$HOME/.pastore-cli/bin\""
